// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export Section adds exports 1`] = `
Module {
  "exports": Array [
    Export {
      "externalKind": 0,
      "externalName": "foo",
      "value": Function {
        "body": Array [],
        "externalKind": 0,
        "functionType": FunctionType {
          "paramTypes": Array [],
          "returnTypes": Array [],
          "type": 96,
        },
        "localTypes": Array [],
        "name": "foo",
        "type": 112,
      },
    },
  ],
  "functions": Array [
    Function {
      "body": Array [],
      "externalKind": 0,
      "functionType": FunctionType {
        "paramTypes": Array [],
        "returnTypes": Array [],
        "type": 96,
      },
      "localTypes": Array [],
      "name": "foo",
      "type": 112,
    },
  ],
  "globals": Array [],
  "imports": Array [],
  "memories": Array [],
  "tables": Array [],
  "types": Array [
    FunctionType {
      "paramTypes": Array [],
      "returnTypes": Array [],
      "type": 96,
    },
  ],
  "version": 1,
}
`;

exports[`Export Section adds exports 2`] = `
Uint8Array [
  0,
  97,
  115,
  109,
  1,
  0,
  0,
  0,
  1,
  4,
  1,
  96,
  0,
  0,
  3,
  2,
  1,
  0,
  7,
  7,
  1,
  3,
  102,
  111,
  111,
  0,
  0,
  10,
  4,
  1,
  2,
  0,
  11,
]
`;

exports[`Export Section adds exports 3`] = `
Module {
  "exports": Array [
    Export {
      "externalKind": 0,
      "externalName": "foo",
      "value": Function {
        "body": Array [],
        "externalKind": 0,
        "functionType": FunctionType {
          "paramTypes": Array [],
          "returnTypes": Array [],
          "type": 96,
        },
        "localTypes": Array [],
        "name": "foo",
        "type": 112,
      },
    },
    Export {
      "externalKind": 0,
      "externalName": "bar",
      "value": Function {
        "body": Array [],
        "externalKind": 0,
        "functionType": FunctionType {
          "paramTypes": Array [],
          "returnTypes": Array [],
          "type": 96,
        },
        "localTypes": Array [],
        "name": "bar",
        "type": 112,
      },
    },
  ],
  "functions": Array [
    Function {
      "body": Array [],
      "externalKind": 0,
      "functionType": FunctionType {
        "paramTypes": Array [],
        "returnTypes": Array [],
        "type": 96,
      },
      "localTypes": Array [],
      "name": "foo",
      "type": 112,
    },
    Function {
      "body": Array [],
      "externalKind": 0,
      "functionType": FunctionType {
        "paramTypes": Array [],
        "returnTypes": Array [],
        "type": 96,
      },
      "localTypes": Array [],
      "name": "bar",
      "type": 112,
    },
  ],
  "globals": Array [],
  "imports": Array [],
  "memories": Array [],
  "tables": Array [],
  "types": Array [
    FunctionType {
      "paramTypes": Array [],
      "returnTypes": Array [],
      "type": 96,
    },
    FunctionType {
      "paramTypes": Array [],
      "returnTypes": Array [],
      "type": 96,
    },
  ],
  "version": 1,
}
`;

exports[`Export Section adds exports 4`] = `
Uint8Array [
  0,
  97,
  115,
  109,
  1,
  0,
  0,
  0,
  1,
  7,
  2,
  96,
  0,
  0,
  96,
  0,
  0,
  3,
  3,
  2,
  0,
  1,
  7,
  13,
  2,
  3,
  102,
  111,
  111,
  0,
  0,
  3,
  98,
  97,
  114,
  0,
  1,
  10,
  7,
  2,
  2,
  0,
  11,
  2,
  0,
  11,
]
`;
